Added logs saving and logs viewer